Updates for graph traversals

--- a/AV/Development/graphDFSPE.html
+++ b/AV/Development/graphDFSPE.html
@@ -27,8 +27,12 @@
         <div class="jsavcanvas">
           <p class="instructLabel">Instructions:</p>
           <p class="instructions">
-            Reproduce the behavior of the depth first search Algorithm for the given graph below. Just Click on the appropriate Graph Nodes in their order of visiting. 
-			Start with Node A.
+            Reproduce the behavior of the DFS algorithm
+	    for the graph below. Just click on the graph nodes
+	    in the order that they will be visited by the DFS algorithm.
+	    Start with Node A. If there is more than one node that
+	    could be visited next, choose the one that comes first in
+	    alphabetical order.
           </p>
           <p id="procontrols">
             <span class="jsavscore"></span>
