--- a/AV/Development/graphDFSPE.html
+++ b/AV/Development/graphDFSPE.html
@@ -48,6 +48,7 @@
     <script src="../../JSAV/extras/binaryheap.js"></script>
     <script src="../../lib/odsaUtils-min.js"></script>
     <script src="../../lib/odsaAV-min.js"></script>
+	<script src="randomGraphGenerator.js"></script>
     <script src="graphDFSPE.js"></script>
   </body>
 </html>
