Rough draft complete for Graphs chapter

--- a/AV/Development/KruskalPE.html
+++ b/AV/Development/KruskalPE.html
@@ -27,8 +27,11 @@
         <div class="jsavcanvas">
           <p class="instructLabel">Instructions:</p>
           <p class="instructions">
-            Reproduce the behavior of Kruskal's Algorithm for the given graph below. Just Click on the appropriate Graph Edge to add to the MST.
-            In case of equal weights select the first edge that appear in the array.			
+            Reproduce the behavior of Kruskal's Algorithm for the
+            graph below. Just click on the appropriate entry in the
+            graph edge array on the right to add it to the MST. 
+            In case of equal weights, select the first edge that
+            appears in the array.
           </p>
           <p id="procontrols">
             <span class="jsavscore"></span>
