Removed indexing on array objects because the values were off. (Recent Bug?)

--- a/Exercises/Development/KMP_Exercise.html
+++ b/Exercises/Development/KMP_Exercise.html
@@ -301,7 +301,7 @@
 
     var index_match = kmp(master_arr, sub_arr);
 
-    main_text = kmp_exercise.ds.array([' '], {indexed: true});
+    main_text = kmp_exercise.ds.array([' '], {indexed: false});
     for(i=0; i<master_str.length;i++) {
         main_text.value(i, master_str.charAt(i));
         if(i < master_answer_location && i >= substring_start_location){
@@ -334,7 +334,7 @@
     }
 
     //initializing the alignment array
-    alignment_table = kmp_exercise.ds.array([' '], {indexed: true});
+    alignment_table = kmp_exercise.ds.array([' '], {indexed: false});
     var align_table_temp = new Array();
     align_table_temp = compute_align_array(sub_arr);
     for(f=0;f<align_table_temp.length;f++) {
