Issues with array indexing.

--- a/Exercises/Development/KMP_Users_Choice.html
+++ b/Exercises/Development/KMP_Users_Choice.html
@@ -364,7 +364,7 @@
 
 
 
-        main_text = kmp_exercise.ds.array([' '], {indexed: true});
+        main_text = kmp_exercise.ds.array([' '], {indexed: false});
 
         shifts_var = kmp_exercise.variable(["0"],{visible: true, label: "shifts = ", before: main_text});
         compares_var = kmp_exercise.variable(["0"],{visible: true, label: "compares = ", before: shifts_var});
