Polishing lists chapter

--- a/Exercises/List/StckQMCQqchrct.html
+++ b/Exercises/List/StckQMCQqchrct.html
@@ -11,7 +11,7 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">The Queue is best characterized as:</p>
+      <p class="question">Queue behavior is typically referred to as:</p>
       <div class="solution"><var>"First-In, First-Out"</var></div>
       <ul class="choices">
 	<li><var>"Last-In, First-Out"</var> </li>
