--- a/Exercises/List/StckQMCQqimpl.html
+++ b/Exercises/List/StckQMCQqimpl.html
@@ -13,7 +13,7 @@
     <div id="problem-type-or-description">
       <p class="question">In the linked implementation of a queue, a
       new item would be added to the:</p> 
-      <div class="solution"><var>"back"</var></div>
+      <div class="solution"><var>"rear"</var></div>
       <ul class="choices">
 	<li><var>"front"</var> </li>
 	<li><var>"current position"</var></li>
