--- a/Exercises/List/listArrayDeletion.html
+++ b/Exercises/List/listArrayDeletion.html
@@ -30,6 +30,9 @@ Written by Junyang Chen and Cliff Shaffer
       -ms-user-select: none;
       user-select: none;
     }
+    .jsavnode .jsavvalue { /* This will get the array cell values to center vertically */
+      height: 30px;
+    }
     .jsavnode {
       line-height: 30px !important;
       min-width: 30px !important;
