--- a/Exercises/List/listLinkedDeletion.html
+++ b/Exercises/List/listLinkedDeletion.html
@@ -47,6 +47,12 @@ Written by Junyang Chen and Cliff Shaffer
     .jsavcanvas svg{
       height: 300px;
     }	
+    .jsavlist .jsavvalue { /* This will get the linked list cell values to center vertically */
+      height: 30px;
+    }
+    .jsavnode .jsavvalue { /* This will get the array cell values to center vertically */
+      height: 30px;
+    }
     .jsavnode {
       line-height: 30px !important;
       min-width: 30px !important;
