Fixed alignment issues with labels.

--- a/Exercises/Development/KMP_Alignment_Array_Exercise.html
+++ b/Exercises/Development/KMP_Alignment_Array_Exercise.html
@@ -177,8 +177,8 @@
     }
     alignment_table.highlight(answer_index);
 
-	var str_label = kmp_exercise.label("String:", {before:str_arr, "left":"0px"});
-	var align_label = kmp_exercise.label("Alignment Table:",{before:alignment_table, "left":"0px"});
+	var str_label = kmp_exercise.label("String:", {before:str_arr});
+	var align_label = kmp_exercise.label("Alignment Table:",{before:alignment_table});
   }
   // reset function definition
   var f_reset = function () {
