--- a/AV/Development/KMP_align_array_slideshow.html
+++ b/AV/Development/KMP_align_array_slideshow.html
@@ -50,6 +50,7 @@
     var str_label = alignment_slideshow.label("String", {before: the_string});
 
     alignment_slideshow.umsg("Lets take the following string as an example for how to calculate the alignment array used in the Knuth Morris Pratt Algorithm.");
+    alignment_slideshow.displayInit();
 
     alignment_slideshow.step();
 
@@ -80,22 +81,25 @@
     alignment_slideshow.umsg("We will now take into consideration the rest of the variables and what they do for us, please follow the algorithm below and look to the current values of the variables if there is any confusion...");
     pseudo_alg.unhighlight(2);
     //var vars = alignment_slideshow.code("p = ? \nq = ? \nalign[p] = ?", {before: str_label, lineNumbers: false});
-    var p = alignment_slideshow.variable(["?"],{visible: true, label: "p = ", left: "150px", bottom: "360px"});
-    var q = alignment_slideshow.variable(["?"], {visible: true, label: "q = ", left: "150px", bottom: "330px"});
-    var alignvar = alignment_slideshow.variable(["?"], {visible: true, label: "align[p] = ", left: "150px", bottom: "300px"});
+    var p = alignment_slideshow.variable(["?"],{visible: true, left: "150px", bottom: "360px"});
+    var q = alignment_slideshow.variable(["?"], {visible: true, left: "150px", bottom: "330px"});
+    var alignvar = alignment_slideshow.variable(["?"], {visible: true, left: "150px", bottom: "300px"});
 
+	p.value("p = ?");
+	q.value("q = ?");
+	alignvar.value("align[p] = ?");
 
     alignment_slideshow.step();
 
     alignment_slideshow.umsg("The first line of the code sets the variable p = 2:");
     pseudo_alg.setCurrentLine(3);
-    p.value("2");
+    p.value("p = 2");
 
     alignment_slideshow.step();
 
     alignment_slideshow.umsg("Then we move onto the next line which sets q to align[p-1] which is 0.");
     pseudo_alg.setCurrentLine(4);
-    q.value("0");
+    q.value("q = 0");
 
     alignment_slideshow.step();
 
@@ -105,7 +109,7 @@
     alignment_slideshow.step();
     alignment_slideshow.umsg("This means we set the q to the value of align[0] which happens to be -1.");
     pseudo_alg.setCurrentLine(6);
-    q.value("-1");
+    q.value("q = -1");
 
     alignment_slideshow.step();
     alignment_slideshow.umsg("We then break out of the loop because q < 0.")
@@ -113,7 +117,7 @@
     alignment_slideshow.step();
     alignment_slideshow.umsg("We then set align[p] to -1 + 1.");
     pseudo_alg.setCurrentLine(7);
-    alignvar.value("0");
+    alignvar.value("align[p] = 0");
     align.value(2, "0");
     align.highlight(2);
 
@@ -121,13 +125,13 @@
     alignment_slideshow.umsg("We now venture back to the beginning of the loop and p is reset to 3.");
     align.unhighlight(2);
     pseudo_alg.setCurrentLine(3);
-    alignvar.value("?");
-    p.value("3");
+    alignvar.value("align[p] = ?");
+    p.value("p = 3");
 
     alignment_slideshow.step();
     alignment_slideshow.umsg("Then we reset q again on the next line to align[p-1] (align[2]) which is 0.");
     pseudo_alg.setCurrentLine(4);
-    q.value("0");
+    q.value("q = 0");
 
     alignment_slideshow.step();
     alignment_slideshow.umsg("We then move onto the while loop which terminates instantly because string[q] (string[0]) is equal to string[p-1] (string[2]), that means that q remains at 0.");
@@ -136,7 +140,7 @@
     alignment_slideshow.step();
     alignment_slideshow.umsg("Since the loop was never entered we jump straight to line 8 where align[p] is set to q + 1. This means align[3] = 1, which makes sense because there is a proper substring directly preceding the current character that matches a substring at the beginnning of the string that is exactly 1 character long. In simpler terms: 'a' === 'a', and 'a' has length 1, so we set the value at this location to the length of the preceding, matching, proper substring.");
     pseudo_alg.setCurrentLine(7);
-    alignvar.value("1");
+    alignvar.value("align[p] = 1");
     align.value(3, "1");
     align.highlight(3);
 
@@ -145,13 +149,13 @@
     alignment_slideshow.umsg("We now venture back to the beginning of the loop and p is reset to 4.");
     align.unhighlight(3);
     pseudo_alg.setCurrentLine(3);
-    alignvar.value("?");    
-    p.value("4");
+    alignvar.value("align[p] = ?");    
+    p.value("p = 4");
 
     alignment_slideshow.step();
     alignment_slideshow.umsg("Then we reset q again on the next line to align[p-1] (align[3]) which is 1.");
     pseudo_alg.setCurrentLine(4);
-    q.value("1");
+    q.value("q = 1");
 
     alignment_slideshow.step();
     alignment_slideshow.umsg("We then move onto the while loop which terminates instantly because string[q] (string[1]) is equal to string[p-1] (string[3]), that means that q remains at 1.");
@@ -160,7 +164,7 @@
     alignment_slideshow.step();
     alignment_slideshow.umsg("Since the loop was never entered we jump straight to line 8 where align[p] is set to q + 1. This means align[4] = 2, which makes sense because there is a proper substring directly preceding the current character that matches a substring at the beginnning of the string that is exactly 2 characters long. In simpler terms: 'ab' === 'ab', and 'ab' has length 2, so we set the value at this location to the length of the preceding, matching, proper substring.");
     pseudo_alg.setCurrentLine(7);
-    alignvar.value("2");
+    alignvar.value("align[p] = 2");
     align.value(4, "2");
     align.highlight(4);
 
@@ -169,13 +173,13 @@
     alignment_slideshow.umsg("We now venture back to the beginning of the loop and p is reset to 5.");
     align.unhighlight(4);
     pseudo_alg.setCurrentLine(3);
-    alignvar.value("?");    
-    p.value("5");
+    alignvar.value("align[p] = ?");    
+    p.value("p = 5");
 
     alignment_slideshow.step();
     alignment_slideshow.umsg("Then we reset q again on the next line to align[p-1] (align[4]) which is 2.");
     pseudo_alg.setCurrentLine(4);
-    q.value("2");
+    q.value("q = 2");
 
     alignment_slideshow.step();
     alignment_slideshow.umsg("We then move onto the while loop which terminates instantly because string[q] (string[2]) is equal to string[p-1] (string[4]), that means that q remains at 2.");
@@ -184,7 +188,7 @@
     alignment_slideshow.step();
     alignment_slideshow.umsg("Since the loop was never entered we jump straight to line 8 where align[p] is set to q + 1. This means align[5] = 3, which makes sense because there is a proper substring directly preceding the current character that matches a substring at the beginnning of the string that is exactly 3 characters long. In simpler terms: 'aba' === 'aba', and 'aba' has length 3, so we set the value at this location to the length of the preceding, matching, proper substring.");
     pseudo_alg.setCurrentLine(7);
-    alignvar.value("3");
+    alignvar.value("align[p] = 3");
     align.value(5, "3");
     align.highlight(5);
 
@@ -192,13 +196,13 @@
     alignment_slideshow.umsg("We now venture back to the beginning of the loop and p is reset to 6.");
     align.unhighlight(5);
     pseudo_alg.setCurrentLine(3);
-    alignvar.value("?");    
-    p.value("6");
+    alignvar.value("align[p] = ?");    
+    p.value("p = 6");
 
     alignment_slideshow.step();
     alignment_slideshow.umsg("Then we reset q again on the next line to align[p-1] (align[5]) which is 3.");
     pseudo_alg.setCurrentLine(4);
-    q.value("3");
+    q.value("q = 3");
 
     alignment_slideshow.step();
     pseudo_alg.setCurrentLine(5);
@@ -207,20 +211,20 @@
     alignment_slideshow.step();
     pseudo_alg.setCurrentLine(6);
     alignment_slideshow.umsg("Now we reset q to align[q] (align[3]) which is 1, and we start the loop over again...");
-    q.value("1");
+    q.value("q = 1");
 
     alignment_slideshow.step();
     alignment_slideshow.umsg("It should be obvious that we will enter the loop again because at string[p-1] we have the value 't' which is matched no where at the beginning of the string. This means we will simply reset q to align[1] which is 0. Then we start over again...");
-    q.value("0");
+    q.value("q = 0");
 
     alignment_slideshow.step();
     alignment_slideshow.umsg("We move into the loop again because nothing matches 't' and q is still >= 0, so q gets reset to align[0] which is -1, ultimately terminating the loop.");
-    q.value("-1");
+    q.value("q = -1");
 
     alignment_slideshow.step();
     pseudo_alg.setCurrentLine(7);
     alignment_slideshow.umsg("We finally get to set the value of align[6] to -1 + 1, which is 0.");
-    alignvar.value("0");
+    alignvar.value("align[p] = 0");
     align.value(6, "0");
     align.highlight(6);
 
@@ -228,13 +232,13 @@
     alignment_slideshow.umsg("We now venture back to the beginning of the loop and p is reset to 7.");
     align.unhighlight(6);
     pseudo_alg.setCurrentLine(3);
-    alignvar.value("?");    
-    p.value("7");
+    alignvar.value("align[p] = ?");    
+    p.value("p = 7");
 
     alignment_slideshow.step();
     alignment_slideshow.umsg("Then we reset q again on the next line to align[p-1] (align[6]) which is 0.");
     pseudo_alg.setCurrentLine(4);
-    q.value("0");
+    q.value("q = 0");
 
     alignment_slideshow.step();
     alignment_slideshow.umsg("We then move onto the while loop which will be entered because align[q] (align[0]) != align[p-1] (align[6]) and also q = 0...");
@@ -247,7 +251,7 @@
     alignment_slideshow.step();
     pseudo_alg.setCurrentLine(7);
     alignment_slideshow.umsg("We now get to set the value of align[7] to -1 + 1, which is 0.");
-    alignvar.value("0");
+    alignvar.value("align[p] = 0");
     align.value(7, "0");
     align.highlight(7);
 
@@ -256,13 +260,13 @@
     alignment_slideshow.umsg("We now venture back to the beginning of the loop and p is reset to 8.");
     align.unhighlight(7);
     pseudo_alg.setCurrentLine(3);
-    alignvar.value("?");    
-    p.value("8");
+    alignvar.value("align[p] = ?");    
+    p.value("p = 8");
 
     alignment_slideshow.step();
     alignment_slideshow.umsg("Then we reset q again on the next line to align[p-1] (align[7]) which is 0.");
     pseudo_alg.setCurrentLine(4);
-    q.value("0");
+    q.value("q = 0");
 
     alignment_slideshow.step();
     alignment_slideshow.umsg("We then move onto the while loop which terminates instantly because string[q] (string[0]) is equal to string[p-1] (string[7]), that means that q remains at 0.");
@@ -271,7 +275,7 @@
     alignment_slideshow.step();
     alignment_slideshow.umsg("Since the loop was never entered we jump straight to line 8 where align[p] is set to q + 1. This means align[8] = 1, which makes sense because there is a proper substring directly preceding the current character that matches a substring at the beginnning of the string that is exactly 1 character long. In simpler terms: 'a' === 'a', and 'a' has length 1, so we set the value at this location to the length of the preceding, matching, proper substring.");
     pseudo_alg.setCurrentLine(7);
-    alignvar.value("1");
+    alignvar.value("align[p] = 1");
     align.value(8, "1");
     align.highlight(8);
 
